# AI-Antivirus-In-Rust

./: .gitignore  README.md
antivirus/: Cargo.toml
antivirus/src/: infer.rs  main.rs
antivirus/src/ai/: onnx.rs
antivirus/src/tools/: convert.rs
trainer/: LSTM.onnx  Model.onnx  docker.sh  embedding.py  embedding_layer.onnx  file_classifier_model.onnx  file_classifier_model.pth  main.py  model.onnx  model.pt  model.py  runner.py  test.py  trainer.py
