[package]
name = "antivirus"
version = "0.1.0"
edition = "2021"

[profile.dev]
rpath = true

[profile.release]
rpath = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = { version = "1.15.2", features = [ "load-dynamic" ] }
ndarray = "0.15.6"
memmap = "0.7"
walkdir = "2.3"